# lime-agents-sdk

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  examples.md  index.md  installation.md  mcp-oauth.md  mkdocs.yml  quickstart.md
src/lime_agents/: __init__.py  _agent.py  _client.py  _domain.py  _errors.py  _oauth.py  _pow.py  _types.py
src/lime_agents/_mcp/: __init__.py  _deps.py  _pool.py  _transport.py
tests/: conftest.py  test_agent.py  test_client.py  test_domain.py  test_mcp_deps.py  test_mcp_facade.py  test_mcp_pool.py  test_mcp_pool_coverage.py  test_mcp_transport.py  test_oauth.py  test_post_empty.py  test_post_raw.py  test_pow.py
tests/fixtures/: README.md
tests/integration/: bootstrap.py  test_full_cycle.py  test_mcp_live.py  test_mcp_streamable_e2e.py  test_oauth_token.py
