[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lime-agents-sdk"
version = "0.5.4"
description = "Official Python agent SDK for LIME: AI agent identity, cryptographic passport JWTs, one-call site login, and MCP OAuth for external MCP servers. Async-first, automatic PoW, typed MCP client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27.0,<1",
    "mcp>=1.12,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "griffe>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/Mawyxx/lime-agents-sdk"
Repository = "https://github.com/Mawyxx/lime-agents-sdk"
Documentation = "https://lime-agents-sdk.readthedocs.io/"

[tool.hatch.build.targets.wheel]
packages = ["src/lime_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: live HTTP tests against LIME API (requires LIME_INTEGRATION=1)",
    "mcp_integration: MCP streamable HTTP E2E (requires LIME_MCP_INTEGRATION=1)",
]

[tool.coverage.run]
source = ["lime_agents"]

[tool.coverage.report]
fail_under = 100

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["lime_agents"]
mypy_path = "src"
